fix: table overflow in mobile verified: stolen

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -105,7 +105,8 @@
 
 @layer components {
   article {
-    @apply prose-headings:!text-foreground prose-headings:scroll-mt-20 prose-headings:break-words first:prose-headings:mt-0 prose-p:break-words prose-a:!break-words prose-a:!decoration-muted-foreground prose-a:underline-offset-[3px] prose-a:transition-colors hover:prose-a:!decoration-foreground prose-pre:!px-0 prose-img:mx-auto relative rounded-lg shadow-sm bg-background !text-muted-foreground;
+    @apply prose-headings:!text-foreground prose-headings:scroll-mt-20 prose-headings:break-words first:prose-headings:mt-0 prose-p:break-words prose-a:!break-words prose-a:!decoration-muted-foreground prose-a:underline-offset-[3px] prose-a:transition-colors hover:prose-a:!decoration-foreground prose-pre:!px-0 prose-img:mx-auto relative rounded-lg shadow-sm bg-background !text-muted-foreground
+      prose-table:mx-auto prose-table:block prose-table:max-w-fit prose-table:overflow-x-auto prose-td:break-words sm:prose-table:mx-0 sm:prose-table:table sm:prose-table:max-w-none;
 
     h1 {
       @apply text-4xl font-bold leading-tight gap-y-6 text-left;
@@ -125,10 +126,10 @@
       @apply relative rounded bg-muted/50 px-[0.3rem] py-[0.2rem] font-mono text-sm font-medium !text-foreground;
     }
 
-
     /* Global table styles */
     table {
       @apply min-w-full table-auto border-collapse border border-muted;
+      @apply overflow-x-auto whitespace-normal;
     }
 
     th, td {
@@ -153,6 +154,10 @@
 
     hr {
       @apply !border-t-2 !border-muted !my-4;
+    }
+
+    blockquote {
+      @apply !border-accent;
     }
   }
 }
